<resources>
    <string name="app_name">Orange Dictionary</string>
    <string name="app_name_plus">Orange Dictionary</string>
    <string name="search">Search a word</string>
    <string name="search_favourites">Search Favourites</string>
    <string name="share">Share</string>
    <string name="random">Random</string>
    <string name="proofreading_marks">Proofreading Marks</string>
    <string name="alphabets_and_diacritics">Alphabets &amp; Diacritics</string>
    <string name="favourites">Favourites</string>
    <string name="about">About</string>
    <string name="bookmark">Bookmark</string>
    <string name="banner_ad_unit_id">ca-app-pub-6209132923798462/4743513846</string>
    <string name="test_banner_ad_unit">ca-app-pub-3940256099942544/6300978111</string>
    <string name="version">version</string>
    <string name="about_app">Orange Dictionary app is an offline dictionary containing terms and their meanings in publishing, printing,
        design and illustration industry. The app will benefit players in the publishing and printing industry,
        editors, designers, typesetters, binders, machine minders, booksellers, Image setters,
        publishing schools and interested persons in and outside Ghana. It is imperative for all understudies of publishing
        and related subjects, as well as those working for the first time in printing, typesetting, production,
        paper making, electronic publishing and editorial jobs to have a dictionary. Orange Dictionary is here to
         serve this purpose.\n\n Features of the app includes:\n
\n• Search a word: This feature allows you to search for the word you want and its meaning.
\n\n• Share: This feature allows you to share a download link of the app and words to your friends.
\n\n• Random: This feature helps you to select words at random.
\n\n• Favourites: This feature allows you to store your favourite words. You can also remove your favourite words at any time.
\n\n• Proofreading marks: This displays a list of marks used in proofreading.
\n\n• Alphabets and diacritics: This is a list of the Greek alphabet and their equivalent Roman alphabet. It also has a list of diacritics.
\n\n• About: This feature tells you what the app is about.
\n\n• Developers: This feature tell you about the developers.
\n\n• Rate us: This feature allows the user to rate the app on Google Play Store to help us know whether you like the app or not.
\n\n• Feedback: This feature allows you to send your feedback, suggestions or comments to the developers. You can also report a problem that may have escaped the developers.
\n\n• Help: This feature gives you guidelines and tips to help you understand how the app works. </string>
    <string name="ob_get_started">PROCEED</string>
    <string name="license_intro">
        \nOrange Dictionary for Android is built using open source software:
        \n\n• Android Open Source Project
          \n\n• SQLiteDatabase Project - Ayushman Singh and Chaitanya Kumar
         \n\n• OnBoarding - DroidMentor
          \n\nDistributed under the Apache License 2.0</string>
    <string name="http_www_apache_org_licenses">http://www.apache.org/licenses/</string>
    <string name="todo">TODO</string>
</resources>