<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.deemiensa.dictionary.main">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primaryDarkColorOrange"
        android:id="@+id/search1">
        <SearchView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:layout_margin="10dp"
            android:background="@drawable/orange_search_rounded_background"
            android:queryHint="@string/search" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_below="@id/search1"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:padding="20dp"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:id="@+id/gridLayout"
                android:rowCount="4">

                <Button
                    android:id="@+id/random"
                    android:text="@string/random"
                    android:layout_width="153dp"
                    android:layout_height="100dp"
                    android:layout_margin="3dp"
                    android:padding="10dp"
                    android:drawableTop="@mipmap/ic_random_white"
                    android:textColor="@color/white"
                    android:background="@color/primaryDarkColorOrange"
                    android:layout_marginTop="1dp"
                    android:onClick="mRandom" />

                <Button
                    android:text="@string/favourites"
                    android:id="@+id/favourites"
                    android:onClick="mFavourites"
                    android:layout_width="153dp"
                    android:layout_height="100dp"
                    android:padding="10dp"
                    android:drawableTop="@mipmap/ic_bookmark_white"
                    android:layout_margin="3dp"
                    android:textColor="@color/white"
                    android:background="@color/primaryColorRed"
                    android:layout_marginTop="1dp" />

                <Button
                    android:layout_width="153dp"
                    android:layout_height="100dp"
                    android:layout_margin="3dp"
                    android:text="@string/proofreading_marks"
                    android:textColor="@color/white"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:drawableTop="@mipmap/ic_proof_white"
                    android:background="@color/primaryDarkColorLightGreen"
                    android:id="@+id/proofreading_marks"
                    android:onClick="mMarks"
                    android:layout_marginTop="1dp"/>

                <Button
                    android:layout_width="153dp"
                    android:layout_height="100dp"
                    android:layout_margin="3dp"
                    android:text="@string/alphabets_and_diacritics"
                    android:id="@+id/alphabets_and_diacritics"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:drawableTop="@mipmap/ic_alphabets_white"
                    android:textColor="@color/white"
                    android:background="@color/primaryColorBlue"
                    android:onClick="mDiacritics"
                    android:layout_marginTop="1dp" />
                <Button
                    android:layout_width="153dp"
                    android:layout_height="100dp"
                    android:layout_margin="3dp"
                    android:text="@string/share"
                    android:drawableTop="@mipmap/ic_share_white"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:background="#8b6382"
                    android:id="@+id/share"
                    android:onClick="mShare"
                    android:layout_marginTop="1dp"/>

                <Button
                    android:layout_width="153dp"
                    android:layout_height="100dp"
                    android:layout_margin="3dp"
                    android:text="@string/about"
                    android:id="@+id/about"
                    android:padding="10dp"
                    android:drawableTop="@mipmap/ic_about_white"
                    android:textColor="@color/white"
                    android:background="@color/primaryColorBlueGray"
                    android:onClick="mAbout"
                    android:layout_marginTop="1dp" />
            </GridLayout>



        </RelativeLayout>
    </ScrollView>
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@id/search1"
        android:background="#fff"
        android:layout_above="@id/adView"
        android:layout_marginTop="10dp" />



    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/test_banner_ad_unit">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>