<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentTop="true"
        android:layout_above="@id/button"
        android:background="@color/transparentBlack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginBottom="16dp"
                android:text="Orange Dictionary of Publishing, Printing, Design &amp; Illustration."/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginBottom="16dp"
                />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/about_app"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                />
            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Text is extracted from the Dictionary of Publishing and Printing &amp; Multimedia Vocabulary available under the CC BY-SA 3.0 license"/>


            <TextView
                android:id="@+id/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:textColor="@color/primaryDarkColorRed"
                android:text="http://creativecommons.org/licenses/by-sa/3.0"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/license_intro"/>


            <TextView
                android:id="@+id/link2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:textColor="@color/primaryDarkColorRed"
                android:text="http://www.apache.org/licenses"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:background="@drawable/logo"
        android:layout_above="@id/version"
        android:contentDescription="@string/todo" />



    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:textStyle="bold"
        android:background="@color/transparentBlack"
        android:text=""/>

    </RelativeLayout>


